kubernetes/oauth2-proxy/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  labels:
    app.kubernetes.io/name: oauth2-proxy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        args:
            #todo /ping /ready
            # 127.0.0.1 by default
          - --http-address=http://0.0.0.0:4180
          - --reverse-proxy=true
          - --skip-provider-button=true
          - --cookie-domain=chilly.griffinht.com
          - --whitelist-domain=.chilly.griffinht.com
          - --set-xauthrequest=true
            #--pass-access-token
            # X-Auth-Request-Access-Token
            #--pass-authorization-header
            #todo real-client-ip-header x-real-ip
            #
            # oidc config
            #
          - --provider=oidc
            #- --scope="openid profile"
            # todo convert to secret and rotate
            # or at least a configmap idk
          - --client-id=277298936371305528@chilly
          - --oidc-issuer-url=https://chilly-u6qnoj.zitadel.cloud
          - --redirect-url=https://oauth2-proxy.chilly.griffinht.com/oauth2/callback
            #- --redirect-url=http://localhost:8080/oauth2/callback
            #useful in case i want downstream app to be able to see wazzzzzup
            #- --pass-access-token=true
          - --email-domain=*
            # todo set to false?
          - --insecure-oidc-allow-unverified-email=true
          # complains when provider has this enabled but we don't use it
          - --code-challenge-method=S256
            # how to log out:
            #
            # dumb solution (works shockingly well)
            #https://oauth2-proxy.chilly.griffinht.com/oauth2/sign_out?rd=https://chilly-u6qnoj.zitadel.cloud/oidc/v1/end_session
            #
            # smart solution (doesn't work)
            # https://zitadel.com/docs/guides/integrate/login/oidc/logout#rp-initiated-logout
            #https://github.com/oauth2-proxy/oauth2-proxy/issues/884
          #- --backend-logout-url=https://chilly-u6qnoj.zitadel.cloud/oidc/v1/end_session?id_token_hint={id_token}&post_logout_redirect_uri=https://redlib.chilly.griffinht.com
          # todo https://github.com/nais/wonderwall/issues?q=logout
          #unrelated todo https://www.ory.sh/docs/oathkeeper
        ports:
        - containerPort: 4180
          name: http
        resources:
          requests:
            memory: 10Mi
            cpu: 25m
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  selector:
    app.kubernetes.io/name: oauth2-proxy
  ports:
  - port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oauth2-proxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: caddy
